// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteItem should match the snapshot if item is checked 1`] = `
<div
  className="noteitem-container"
>
  <input
    checked={true}
    className="checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <input
    autocomplete="off"
    className="form-input item-input"
    onChange={[MockFunction]}
    placeholder="new item"
    type="text"
  />
  <button
    className="item-del"
    onClick={[Function]}
  >
    x
  </button>
</div>
`;

exports[`NoteItem should match the snapshot if item is unchecked 1`] = `
<div
  className="noteitem-container"
>
  <input
    className="checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <input
    autocomplete="off"
    className="form-input item-input"
    onChange={[MockFunction]}
    placeholder="new item"
    type="text"
  />
  <button
    className="item-del"
    onClick={[Function]}
  >
    x
  </button>
</div>
`;
